--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "da_web": "file:",
     "dotenv": "^16.4.5",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
