--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,10 +20,11 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
+    "redux": "^5.0.1",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5",
-    "redux": "^5.0.1"
+    "semantic-ui-react": "^2.1.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
