--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,19 +14,13 @@
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
-    "crypto-js": "^4.2.0",
-    "frontend": "file:",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
-    "react-transition-group": "^4.4.5",
-    "redux": "^5.0.1",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5",
-    "uuid": "^10.0.0"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
