--- a/Backend/package.json
+++ b/Backend/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "da_web": "file:",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
