--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "animejs": "^3.2.2",
     "antd": "^5.21.3",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
