--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^8.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "@payos/node": "^1.0.10",
     "bcryptjs": "^2.4.3",
