--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,12 +29,13 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@payos/node": "^1.0.10",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "da_web": "file:",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.6",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "passport": "^0.7.0",
